--- a/package.json
+++ b/package.json
@@ -12,6 +12,28 @@
     }
   },
   "type": "module",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "cross-env NODE_ENV=development eslint --cache"
+    ],
+    "*.json,.{eslintrc,prettierrc}": [
+      "prettier --ignore-path .eslintignore --parser json --write"
+    ],
+    "*.{ejs,html,md,yml,css,less}": [
+      "prettier --ignore-path .eslintignore --single-quote --write"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "preview": "vite preview",
@@ -24,10 +46,21 @@
   "dependencies": {
     "@xyflow/react": "^12.3.2",
     "antd": "^5.21.6",
-    "electron-updater": "^6.1.8"
+    "axios": "^1.7.7",
+    "axios-mock-adapter": "^2.1.0",
+    "base-64": "^1.0.0",
+    "electron-updater": "^6.1.8",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
+    "lodash-es": "^4.17.21",
+    "moment": "^2.30.1",
+    "react-router": "^6.27.0",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.42.1",
+    "@types/base-64": "^1.0.2",
+    "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
