--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "less-loader": "^12.2.0",
     "lodash-es": "^4.17.21",
     "moment": "^2.30.1",
+    "nedb": "^1.8.0",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0"
   },
@@ -61,6 +62,7 @@
     "@playwright/test": "^1.42.1",
     "@types/base-64": "^1.0.2",
     "@types/lodash-es": "^4.17.12",
+    "@types/nedb": "^1.8.16",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
