--- a/package.json
+++ b/package.json
@@ -44,19 +44,25 @@
     "win": "npm run build && electron-builder --windows"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "@xyflow/react": "^12.3.2",
     "antd": "^5.21.6",
     "axios": "^1.7.7",
     "axios-mock-adapter": "^2.1.0",
     "base-64": "^1.0.0",
     "electron-updater": "^6.1.8",
+    "jszip": "^3.10.1",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "lodash-es": "^4.17.21",
     "moment": "^2.30.1",
     "nedb": "^1.8.0",
+    "react-redux": "^7.2.4",
     "react-router": "^6.27.0",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@playwright/test": "^1.42.1",
@@ -65,6 +71,7 @@
     "@types/nedb": "^1.8.16",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "@types/react-redux": "^7.1.18",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
     "electron": "^32.2.2",
