--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "win": "npm run build && electron-builder --windows"
   },
   "dependencies": {
+    "@antv/x6": "^2.18.1",
     "@reduxjs/toolkit": "^2.3.0",
     "@xyflow/react": "^12.3.2",
     "antd": "^5.21.6",
