--- a/package.json
+++ b/package.json
@@ -45,8 +45,18 @@
   },
   "dependencies": {
     "@antv/x6": "^2.18.1",
+    "@antv/x6-plugin-dnd": "^2.1.1",
+    "@antv/x6-plugin-export": "^2.1.6",
+    "@antv/x6-plugin-history": "^2.2.4",
+    "@antv/x6-plugin-minimap": "^2.0.7",
+    "@antv/x6-plugin-selection": "^2.2.2",
+    "@antv/x6-plugin-snapline": "^2.1.7",
+    "@antv/x6-plugin-stencil": "^2.1.5",
+    "@antv/x6-plugin-transform": "^2.1.8",
+    "@antv/x6-react-components": "^2.0.8",
+    "@antv/x6-react-shape": "^2.2.3",
+    "@antv/xflow": "^2.1.13",
     "@reduxjs/toolkit": "^2.3.0",
-    "@xyflow/react": "^12.3.2",
     "antd": "^5.21.6",
     "axios": "^1.7.7",
     "axios-mock-adapter": "^2.1.0",
@@ -57,7 +67,10 @@
     "less-loader": "^12.2.0",
     "lodash-es": "^4.17.21",
     "moment": "^2.30.1",
+    "monaco-editor": "^0.52.0",
+    "monaco-editor-webpack-plugin": "^7.1.0",
     "nedb": "^1.8.0",
+    "react-monaco-editor": "^0.56.2",
     "react-redux": "^7.2.4",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
