画布功能栏

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "monaco-editor": "^0.52.0",
     "monaco-editor-webpack-plugin": "^7.1.0",
     "nedb": "^1.8.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-monaco-editor": "^0.56.2",
     "react-redux": "^7.2.4",
     "react-router": "^6.27.0",
@@ -83,6 +84,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/nedb": "^1.8.16",
     "@types/react": "^18.2.64",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.21",
     "@types/react-redux": "^7.1.18",
     "@vitejs/plugin-react": "^4.2.1",
