--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "win": "npm run build && electron-builder --windows"
   },
   "dependencies": {
+    "@antv/layout": "^1.2.14-beta.8",
     "@antv/x6": "^2.18.1",
     "@antv/x6-plugin-dnd": "^2.1.1",
     "@antv/x6-plugin-export": "^2.1.6",
