--- a/package.json
+++ b/package.json
@@ -77,7 +77,9 @@
     "react-router-dom": "^6.27.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "xterm": "^5.3.0",
+    "xterm-addon-attach": "^0.9.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.42.1",
