--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "vite-plugin-monaco-editor": "^1.1.0",
+    "windows-shortcuts": "^0.1.6",
     "xlsx": "^0.18.5",
     "xterm": "^5.3.0",
     "xterm-addon-attach": "^0.9.0"
