--- a/package.json
+++ b/package.json
@@ -69,12 +69,14 @@
     "monaco-editor": "^0.52.0",
     "nedb": "^1.8.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-markdown": "^9.0.1",
     "react-monaco-editor": "^0.56.2",
     "react-redux": "^7.2.4",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
+    "remark-gfm": "^4.0.0",
     "vite-plugin-monaco-editor": "^1.1.0",
     "windows-shortcuts": "^0.1.6",
     "xlsx": "^0.18.5",
