--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "monaco-editor": "^0.52.0",
     "nedb": "^1.8.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-markdown": "^9.0.1",
     "react-monaco-editor": "^0.56.2",
     "react-redux": "^7.2.4",
