引入react-moveable做前端布局配置

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "axios": "^1.7.7",
     "axios-mock-adapter": "^2.1.0",
     "base-64": "^1.0.0",
+    "echarts": "^5.5.1",
     "electron-updater": "^6.1.8",
     "jszip": "^3.10.1",
     "less": "^4.2.0",
@@ -73,6 +74,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-markdown": "^9.0.1",
     "react-monaco-editor": "^0.56.2",
+    "react-moveable": "^0.56.0",
     "react-redux": "^7.2.4",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
