引入react-moveable做前端布局配置

--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "productName": "UBVision",
     "appId": "com.ubsense.ubvision",
     "asar": true,
+    "compression": "maximum",
     "asarUnpack": [
       "**\\*.{node,dll}",
       "../node_modules/node-notifier/**/*"
