--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "axios-mock-adapter": "^2.1.0",
     "base-64": "^1.0.0",
     "echarts": "^5.5.1",
+    "echarts-gl": "^2.0.9",
     "electron-updater": "^6.1.8",
     "jszip": "^3.10.1",
     "less": "^4.2.0",
@@ -75,6 +76,7 @@
     "react-markdown": "^9.0.1",
     "react-monaco-editor": "^0.56.2",
     "react-moveable": "^0.56.0",
+    "react-open-weather": "^1.3.8",
     "react-redux": "^7.2.4",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
